# avatar

./: README.md  avatar.ows  pyproject.toml  reddit.csv  reddit.py
data/: comments_awe.csv  comments_empathy.csv  comments_ident.csv  posts_awe.csv  posts_empathy.csv  posts_ident.csv
